--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <java.version>1.8</java.version>
     </properties>
     <build>
+        <defaultGoal>package</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -54,23 +55,6 @@
                         <goals>
                             <goal>run</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId> maven-assembly-plugin </artifactId>
-                <configuration>
-                    <!-- 使用Maven预配置的描述符-->
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <!-- 绑定到package生命周期 -->
-                        <phase>package</phase>
                     </execution>
                 </executions>
             </plugin>
